// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Billing Banners:  Enterprise banner renders 1`] = `
<Banner
  action={
    Object {
      "content": "Contact Us",
      "external": true,
      "onClick": [Function],
      "to": "https://www.sparkpost.com/contact-enterprise",
    }
  }
  status="default"
  title="Enterprise"
>
  <p>
    Enterprise-grade financial guarantees with 99.9% uptime SLA and guaranteed burst rates.
  </p>
  <ul>
    <li>
      Includes all standard SparkPost and Premium features
    </li>
    <li>
      Comprehensive uptime SLAs with service credits
    </li>
    <li>
      The industry’s only burst-rate guarantee
    </li>
    <li>
      Support for iOS Universal Links and Android App Links
    </li>
  </ul>
</Banner>
`;

exports[`Billing Banners:  Free Plan Downgrade warning banner renders 1`] = `
<Banner
  status="warning"
  title="Free Plan Downgrade"
>
  <p>
    Your plan will automatically downgrade to 500 emails/month in 
    15 days
    . 
    <Link
      replace={false}
      to="/account/billing/plan"
    >
      Upgrade your plan
    </Link>
     to keep or increase your sending limits.
  </p>
</Banner>
`;

exports[`Billing Banners:  Free Plan Downgrade warning banner renders correct text on last day of plan 1`] = `
<Banner
  status="warning"
  title="Free Plan Downgrade"
>
  <p>
    Your plan will automatically downgrade to 500 emails/month in 
    1 day
    . 
    <Link
      replace={false}
      to="/account/billing/plan"
    >
      Upgrade your plan
    </Link>
     to keep or increase your sending limits.
  </p>
</Banner>
`;

exports[`Billing Banners:  Free Plan Downgrade warning banner should not render anything if pending plan change 1`] = `""`;

exports[`Billing Banners:  Free Plan Downgrade warning banner should not render if current plan does not include free15K 1`] = `""`;

exports[`Billing Banners:  Free Plan Downgrade warning banner should not render if days account age is greater than ageRangeEnd 1`] = `""`;

exports[`Billing Banners:  Free Plan Downgrade warning banner should not render if days acount age is less than ageRangeStart 1`] = `""`;

exports[`Billing Banners:  Free Plan Downgrade warning banner should not render if past 30 days of creation date 1`] = `""`;

exports[`Billing Banners:  PendingPlanBanner should render with pending_subscription 1`] = `
<Banner
  status="info"
  title="Pending Plan Change"
>
  <p>
    You're scheduled to switch to the 
     plan on 
    Oct 05, 2020
    , and can't update your plan until that switch happens.
  </p>
</Banner>
`;

exports[`Billing Banners:  Premium banner renders 1`] = `
<Banner
  action={
    Object {
      "content": "Contact Us",
      "external": true,
      "onClick": [Function],
      "to": "https://www.sparkpost.com/contact-premium",
    }
  }
  status="default"
  title="Premium Addon Plan"
>
  <p>
    Get full-service Technical Account Management with proactive reporting, planning & reviews.
  </p>
  <ul>
    <li>
      Includes all standard SparkPost features
    </li>
    <li>
      Dedicated Technical Account Manager (TAM)
    </li>
    <li>
      Global ISP relations and mediation
    </li>
    <li>
      Deliverability data analysis and guidance with 250ok
    </li>
  </ul>
</Banner>
`;

exports[`Billing Banners:  Premium banner renders correctly for aws users 1`] = `
<Banner
  action={
    Object {
      "component": [Function],
      "content": "Request Premium Support",
      "onClick": [Function],
      "to": "/support/aws-premium",
    }
  }
  status="default"
  title="Premium Addon Plan"
>
  <p>
    Get full-service Technical Account Management with proactive reporting, planning & reviews.
  </p>
  <ul>
    <li>
      Includes all standard SparkPost features
    </li>
    <li>
      Dedicated Technical Account Manager (TAM)
    </li>
    <li>
      Global ISP relations and mediation
    </li>
    <li>
      Deliverability data analysis and guidance with 250ok
    </li>
  </ul>
</Banner>
`;
